@@ -22,7 +22,7 @@ import weka.core.*;
 
 import java.sql.SQLException;
 import java.util.ArrayList;
-import java.util.List;
+import java.util.Arrays;
 
 public class ModelController {
     private static ModelController instance = null;
@@ -125,7 +125,7 @@ public class ModelController {
      */
     private void trainModel(TrainedModel trainedModel) throws Exception {
         Instances trainingSet = createInstancesFromAssets(assetDaoImpl.getAssetsFromAssetTypeID(trainedModel.getAssetTypeID()));
-        Instances reducedData = DataPrePreprocessorController.getInstance().minimallyReduceData(trainingSet);
+        Instances reducedData = DataPrePreprocessorController.getInstance().addRULCol(trainingSet);
         ModelStrategy modelStrategy = getModelStrategy(trainedModel);
         if (modelStrategy != null) {
             ModelsController modelsController = new ModelsController(modelStrategy);
@@ -160,8 +160,8 @@ public class ModelController {
     public Double estimateRUL(Asset asset, Classifier classifier) {
         AssessmentController assessmentController = new AssessmentController();
         Double estimate = -10000000.0;
-        Instances toTest = createInstancesFromAssets(new ArrayList<Asset>(List.of(asset)));
-        //toTest = DataPrePreprocessorController.getInstance().removeAttributes(reducedInstancesSets.get(classifierID),toTest);
+        Instances toTest = createInstancesFromAssets(new ArrayList<Asset>(Arrays.asList(asset)));
+       //toTest = DataPrePreprocessorController.getInstance().removeAttributes(reducedInstancesSets.get(classifierID),toTest);
         try {
             DataPrePreprocessorController dppc = DataPrePreprocessorController.getInstance();
             toTest = dppc.addRULCol(toTest);
